--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,15 +22,17 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: 安裝 Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: 安裝 pygame
+        run: pip install pygame
+
+      - name: 執行程式
         run: python pygame-simple-game.py
-          echo Add other actions to build,
-          echo test, and deploy your project.
+
